--- a/.github/workflows/master_securityfunctionsicaro.yml
+++ b/.github/workflows/master_securityfunctionsicaro.yml
@@ -14,6 +14,16 @@ env:
   DOTNET_VERSION: '6.0.x' # set this to the dotnet version to use
 
 jobs:
+  checking_code:
+    runs-on: ubuntu-latest
+    name: Horusec Scan
+    steps:
+      - name: Run Horusec
+        id: run_horusec
+        uses: fike/horusec-action@v0.1
+        with:
+          arguments: --config-file-path=horusec-config.json
+
   build-and-deploy:
     runs-on: windows-latest
     steps:
